--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/github": "^5.1.1",
-    "@octokit/auth-app": "^4.0.7"
+    "@octokit/auth-app": "^4.0.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.1",
