--- a/package.json
+++ b/package.json
@@ -29,32 +29,33 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "@actions/github": "^4.0.0",
-    "@octokit/auth-app": "^2.11.0"
+    "@actions/github": "^5.1.1",
+    "@octokit/auth-app": "^4.0.7",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/exec": "^5.0.0",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.0",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.26",
-    "@typescript-eslint/parser": "^4.15.2",
-    "@vercel/ncc": "^0.25.1",
-    "conventional-changelog-conventionalcommits": "^4.5.0",
-    "eslint": "^7.17.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.6",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
+    "@typescript-eslint/parser": "^5.41.0",
+    "@vercel/ncc": "^0.34.0",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
+    "eslint": "^8.26.0",
     "eslint-plugin-github": "^4.1.1",
-    "eslint-plugin-jest": "^24.1.3",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
-    "js-yaml": "^3.14.0",
+    "eslint-plugin-jest": "^27.1.3",
+    "jest": "^29.2.2",
+    "jest-circus": "^29.2.2",
+    "js-yaml": "^4.1.0",
     "nock": "^13.0.7",
-    "prettier": "2.2.1",
-    "semantic-release": "^17.3.9",
-    "ts-jest": "^26.4.4",
-    "ts-node-dev": "^1.1.1",
+    "prettier": "2.7.1",
+    "semantic-release": "^19.0.5",
+    "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.1.5"
   }
 }
